# Kria-RTSP-Stream-Viewer-Client

./: .gitignore  CMakeLists.txt  README.md
docs/: TEST_INSTRUCTIONS.md
include/: distancemap.h  mainwindow.h  nativecontroller.h  network_config_example.h  rtspstreamer.h
scripts/: install_qt_kria.sh
src/: distancemap.cpp  main.cpp  mainwindow.cpp  nativecontroller.cpp  rtspstreamer.cpp
tests/: debug_udp.py  test_controller.py  test_server.py
ui/: mainwindow.ui
